dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_HEADER(src/config.h)

dnl ****************************************************************************
dnl Macros
dnl ****************************************************************************

AC_DEFUN(MY_ERROR,
[
  echo
  echo 'x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x'
  echo 'x x x      monDB    Configuration failure             x x x'
  echo 'x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x'
  echo 'hint :'
  echo '      ' $1
  exit 1
])

dnl MY_CHECK_SIZEOF(TYPE [, CROSS-SIZE])
AC_DEFUN(MY_CHECK_SIZEOF,
[changequote(<<, >>)dnl
dnl The name to #define.
define(<<AC_TYPE_NAME>>, translit(sizeof_$1, [a-z *], [A-Z_P]))dnl
dnl The cache variable name.
define(<<AC_CV_NAME>>, translit(ac_cv_sizeof_$1, [ *], [_p]))dnl
changequote([, ])dnl
AC_MSG_CHECKING(size of $1)
AC_CACHE_VAL(AC_CV_NAME,
[AC_TRY_RUN([#include <stdio.h>
main()
{
  FILE *f=fopen("conftestval", "w");
  if (!f) exit(1);
  fprintf(f, "%d\n", sizeof($1));
  exit(0);
}], AC_CV_NAME=`cat conftestval`, AC_CV_NAME=0, ifelse([$2], , , AC_CV_NAME=$2))])dnl
AC_MSG_RESULT($AC_CV_NAME)
AC_DEFINE_UNQUOTED(AC_TYPE_NAME, $AC_CV_NAME)
undefine([AC_TYPE_NAME])dnl
])

dnl AC_SET_PACKAGE(package_name,env_variable,help_string,default_value)
dnl On output:
dnl variable USE_package_name will be set
dnl variable DIR_package_name will be non-empty for particular check
AC_DEFUN(AC_SET_PACKAGE,
[
  DIR_$1=
  AC_ARG_WITH($1,[$3],,with_$1=$4)
  if test "${with_$1}" = "no" || test "${with_$1}" = ""; then
    # Package is disable
    echo Package $1 is disable
    USE_$1=no
    AC_DEFINE(USE_$1,0)
  else
    USE_$1=yes
    AC_DEFINE(USE_$1,1)
    # Package is enable
    AC_CHECKING($1)
    if test "${with_$1}" = "yes"; then
      # Try to search in standard places.
      # At first we check environment variable $2
      AC_MSG_CHECKING(environment variable $2)
      if test "$$2" = ""; then
        AC_MSG_RESULT(variable was not set)
      else
        # The enviaronment variable is defined. We shall use it.
        AC_MSG_RESULT($$2)
        with_$1=$$2
      fi
    else
      # Exact value was given: --with-package=/dir1/dir2/
      true
    fi
    
    if test "${USE_$1}" = "yes" && test "${with_$1}" != "yes"; then
      DIR_$1=${with_$1}
    fi
  fi
  AC_SUBST(USE_$1)
  AC_SUBST(DIR_$1)
  AC_SUBST(LIB_$1)
])

dnl ****************************************************************************
dnl CFLAGS
dnl ****************************************************************************

AC_ARG_WITH(CFLAGS,
[  --with-CFLAGS           default value is  --with-CFLAGS=\"-O2\"],
if test "$with_CFLAGS" != "no"; then
  CFLAGS=$with_CFLAGS
fi
,
CFLAGS="-Wall -O2"
)

dnl ****************************************************************************
dnl Create shared or static library
dnl ****************************************************************************

AC_ARG_ENABLE(shared,[  --enable-shared           library type;  default is static library],,enable_shared="no")
if test "${enable_shared}" = "yes"; then
  LIB_TYPE=shared
else
  LIB_TYPE=static
fi
AC_SUBST(LIB_TYPE)

dnl ****************************************************************************

dnl Checks for programs.
AC_PROG_INSTALL

dnl Check for compilers

AC_PROG_CC
AC_PROG_CPP 

AC_PROG_CXX
AC_PROG_CXXCPP

dnl If words are stored with the most significant byte first 
dnl (like Motorola and SPARC, but not Intel and VAX, CPUs), define WORDS_BIGENDIAN. 
AC_C_BIGENDIAN

AC_C_CHAR_UNSIGNED
MY_CHECK_SIZEOF(char)
MY_CHECK_SIZEOF(long long)
MY_CHECK_SIZEOF(long)
MY_CHECK_SIZEOF(int)
MY_CHECK_SIZEOF(short)

dnl X-windows system configuration (x_includes,x_libraries or no_x)
dnl AC_PATH_X


dnl **************************************************************************
dnl DataBase 
dnl **************************************************************************

#AC_ARG_WITH(DATABASE,
#[  --with-DATABASE           default value is  --with-DATABASE=\"mysql\"],
#if test "$with_DATABASE" != "no"; then
#  AC_DEFINE(USE_DATABASE,$with_DATABASE)
#fi
#,
#AC_DEFINE(USE_DATABASE,"mysql")
#)
#AC_SUBST(USE_DATABASE)

#if test "$USE_DATABASE" = "mysql"; then

AC_SET_PACKAGE(DATABASE,DATABASE,[  --with-mysql         enable on default],"yes")
if test "$USE_DATABASE" = "yes"; then
  if test "$DIR_DATABASE" = ""; then
    DIR_DATABASE=/afs/cern.ch/compass/detector/monitor/mysql
  fi
  AC_CHECK_FILE($DIR_DATABASE,,MY_ERROR(Problem with MYSQL library))
  AC_CHECK_FILE($DIR_DATABASE/lib/libmysqlclient.a,,MY_ERROR(Problem with MYSQL library))
  LIB_DATABASE="-L$DIR_DATABASE/lib -lmysqlclient -lz "
  LIBS="$LIBS -Wl,-rpath,-L$DIR_DATABASE/lib $LIB_DATABASE"

  CFLAGS="$CFLAGS -I$DIR_DATABASE/include"
fi




LIBS="$LIBS -lnsl"

echo Creating 'include' directory
mkdir include
rm -f include/*
cd include
ln -sf ../src/*.h ./
cd ..

auto_config_files="Makefile.inc"
AC_SUBST(auto_config_files)
AC_OUTPUT($auto_config_files)

grep define src/config.h | grep USE_
echo
echo '*************************************************'
echo '***   monDB configuration success             ***'
echo '*************************************************'
echo



